# weather-tool

./: .gitignore  OUTLINE.md  PLAN.md  pyproject.toml  pyrightconfig.json
